# Lyra-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  README.md  vcpkg.json
Configs/: Compiler.cmake  Project.cmake  System.cmake
Designs/: Render.md  Scenes.md
Plugins/: CMakeLists.txt
Plugins/D3D12/: CMakeLists.txt  D3D12Adapter.cpp  D3D12Blas.cpp  D3D12Buffer.cpp  D3D12CommandBuffer.cpp  D3D12CommandPool.cpp  D3D12Device.cpp  D3D12Factory.cpp  D3D12Fence.cpp  D3D12Frame.cpp  D3D12Heap.cpp  D3D12Layout.cpp  D3D12Pipeline.cpp  D3D12Plugin.cpp  D3D12QuerySet.cpp  D3D12Sampler.cpp  D3D12Shader.cpp  D3D12Swapchain.cpp  D3D12Texture.cpp  D3D12Utils.cpp  D3D12Utils.h  Plugin.cpp
Plugins/D3D12/src/: D3D12Adapter.cpp  D3D12Buffer.cpp  D3D12Tlas.cpp  D3D12Utils.cpp
Plugins/Dxc/: CMakeLists.txt  DxcCompiler.cpp  DxcIncludeHandler.h  DxcUtils.cpp  DxcUtils.h  Plugin.cpp  WinComPtr.h
Plugins/Glfw/: CMakeLists.txt  GlfwMacOS.mm  GlfwPlugin.cpp  MacOS.mm  Plugin.cpp
Plugins/ImGui/: CMakeLists.txt  GUIRenderer.cpp  GUIRenderer.h  ImGuiPlugin.cpp
Plugins/ImGui/Fonts/: README.md
Plugins/ImGui/Shaders/: GUIShader.slang
Plugins/Ktx/: CMakeLists.txt  KtxAsset.cpp  KtxAsset.h  KtxPlugin.cpp
Plugins/NativeFS/: CMakeLists.txt  NativeFS.h  NativeFSPlugin.cpp  NativeFSUtils.cpp  NativeFSUtils.h
Plugins/Pak/: CMakeLists.txt  PakPlugin.cpp  PakTypes.h
Plugins/PakBuilder/: CMakeLists.txt  PakBuilderPlugin.cpp  PakBuilderTypes.h
Plugins/PakFS/: CMakeLists.txt  PakPlugin.cpp  PakUtils.cpp  PakUtils.h
Plugins/PhysFS/: CMakeLists.txt  PhysFS.h  PhysFSPlugin.cpp  PhysFSUtils.cpp  PhysFSUtils.h
Plugins/Slang/: CMakeLists.txt  Plugin.cpp  SlangPlugin.cpp  SlangUtils.cpp  SlangUtils.h
Plugins/Slang/src/: SlangUtils.h
Plugins/Vulkan/: CMakeLists.txt  Plugin.cpp  VkAdapter.cpp  VkBlas.cpp  VkBuffer.cpp  VkCommandBuffer.cpp  VkCommandPool.cpp  VkDescriptorPool.cpp  VkDevice.cpp  VkFence.cpp  VkFrame.cpp  VkImage.cpp  VkInclude.h  VkInstance.cpp  VkLayout.cpp  VkMappings.cpp  VkMappings.h  VkPipeline.cpp  VkPlugin.cpp  VkQuery.cpp  VkQueue.cpp  VkSampler.cpp  VkSemaphore.cpp  VkShader.cpp  VkSurface.cpp  VkSwapchain.cpp  VkTlas.cpp  VkUtils.cpp  VkUtils.h
Plugins/Vulkan/src/: VkAdapter.cpp  VkCommandPool.cpp  VkFrame.cpp  VkImage.cpp  VkSampler.cpp
Plugins/Zip/: CMakeLists.txt  ZipPlugin.cpp  ZipTypes.h
Plugins/ZipBuilder/: CMakeLists.txt  ZipBuilderPlugin.cpp  ZipBuilderTypes.h
Plugins/ZipFS/: CMakeLists.txt  ZipPlugin.cpp  ZipUtils.cpp  ZipUtils.h
Samples/: CMakeLists.txt  test.cpp  test.slang
Samples/01_Triangle/: CMakeLists.txt  README.md  main.cpp
Samples/02_UserInput/: CMakeLists.txt  main.cpp  shader.slang
Samples/Editor/: CMakeLists.txt  application.cpp  application.h  main.cpp  renderer.cpp  renderer.h
Samples/SimpleWindow/: CMakeLists.txt  main.cpp  shader.slang
Scripts/: install.bat  runtest.py
Targets/: BoxerConfig.cmake.in  LyraEngineConfig.cmake.in
TestKit/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
TestKit/basic_graphics_pipeline/: README.md  main.cpp
TestKit/common/: app.cpp  app.h  camera.h  common.h  geometry.cpp  geometry.h  helper.h  linmath.h  pipeline.cpp  pipeline.h  render.cpp  render.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex.h
TestKit/depth_test/: CMakeLists.txt  README.md  main.cpp
TestKit/dynamic_uniform/: README.md  main.cpp
TestKit/frame_graph/: README.md  main.cpp
TestKit/graphics_pipeline/: README.md  main.cpp
TestKit/push_constants/: README.md  main.cpp
TestKit/shader_reflection/: CMakeLists.txt  main.cpp
TestKit/stencil_test/: README.md  main.cpp
TestKit/texture_sampling/: README.md  main.cpp
TestLib/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
TestLib/test.00/: CMakeLists.txt  main.cpp
Vendors/: FindBoxer.cmake  FindCmrc.cmake  FindCxxopts.cmake  FindD3D12.cmake  FindD3D12MemoryAllocator.cmake  FindDocTest.cmake  FindDxc.cmake  FindEntt.cmake  FindFmt.cmake  FindGlfw.cmake  FindGlm.cmake  FindImGui.cmake  FindJson.cmake  FindKtx.cmake  FindLibAssert.cmake  FindMagic_Enum.cmake  FindMiniZip.cmake  FindMiniz.cmake  FindPhysFS.cmake  FindSlang.cmake  FindSpdLog.cmake  FindStb.cmake  FindToml.cmake  FindVma.cmake  FindVolk.cmake  FindVulkanMemoryAllocator.cmake
